# aula02_workshop

./: README.md  main.py  pyproject.toml  requirements-dev.txt  testes.py
app/: config_db.py  data.py  main.py  router.py  schema.py
github/workflows/: main.yml
tests/: test_api.py
