[tool.poetry]
name = "aula02-workshop"
version = "0.1.0"
description = ""
authors = ["André Moraes <andrelamounier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
